--- a/Makefile.sample
+++ b/Makefile.sample
@@ -50,8 +50,10 @@ package:
 	@cp -R js ${TMP}
 	@cp submodules/snuownd/snuownd.js ${TMP}/js
 	@mkdir -p ${TMP}/img/icons
-	@cp img/icons/ic_{edit,open,info,star,up,down,view_list,rotate,settings,search}.png ${TMP}/img/icons
+	@cp img/icons/ic_{textmessage,email_new,email,email_read,edit,open,info,star,up,down,view_list,rotate,settings,search}.png ${TMP}/img/icons
+	@cp img/glyphicons-halflings.png ${TMP}/img
 	@cp img/icons/app-114.png ${TMP}/img/icons
+	@cp img/splash-720.png ${TMP}/img
 	@cp img/splash.png ${TMP}/img
 	@cp -R font ${TMP}
 	@cp -R css ${TMP}
